Pass secrets together as a single environment variable as a JSON document to preserve the secrets' original names